--- a/src/index.html
+++ b/src/index.html
@@ -3,10 +3,10 @@
 
 <head>
   <meta charset="utf-8">
-  <title>FastFunctionalAnalysis</title>
+  <title>FastFundamentalAnalysis</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Fast Functional Analysis">
+  <meta name="description" content="Fast Fundamental Analysis">
   <meta name="author" content="glombardo">
 
   <link rel="icon" type="image/x-icon" href="favicon.ico">
